clusters/talos-cluster/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pi-hole
  labels:
    pod-security.kubernetes.io/enforce: privileged
