clusters/talos-cluster/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-hole-deployment
  namespace: pi-hole
  labels:
    app: pi-hole-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-hole-deployment
  template:
    metadata:
      name: pi-hole-deployment
      labels:
        app: pi-hole-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: pi-hole-deployment
          image: pihole/pihole:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pi-hole-data
              mountPath: /etc/pihole/
            - name: pi-hole-dnsmasq
              mountPath: /etc/dnsmasq.d/
        - name: tailscale
          image: tailscale/tailscale:latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add: [ "NET_ADMIN" ]
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: tailscale-data
              mountPath: /data
            - name: tailscale-state
              mountPath: /state
      volumes:
        - name: pi-hole-data
          persistentVolumeClaim:
            claimName: pi-hole-data
        - name: pi-hole-dnsmasq
          persistentVolumeClaim:
            claimName: pi-hole-dnsmasq
        - name: tailscale-data
          persistentVolumeClaim:
            claimName: tailscale-data
        - name: tailscale-state
          persistentVolumeClaim:
            claimName: tailscale-state
