clusters/talos-cluster/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-service
  namespace: pi-hole
spec:
  selector:
    app: pi-hole-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: pi-hole
